--- a/.emacs.d/configuration.org
+++ b/.emacs.d/configuration.org
@@ -334,3 +334,14 @@
   :ensure t
   :mode "\\.nix\\'")
 #+end_src
+
+
+** IRMA
+
+#+begin_src emacs-lisp
+  (add-to-list 'load-path "~/.dotfiles/.emacs.d/tvl")
+    (require 'tvl)
+  (setq tvl-depot-path "~/work/git/irma")
+  (setq tvl-target-branch "refs/for/master")
+  (setq tvl-gerrit-remote "origin")
+#+end_src
