--- a/.emacs.d/configuration.org
+++ b/.emacs.d/configuration.org
@@ -90,19 +90,27 @@
   ([remap describe-key] . helpful-key))
 #+end_src
 
-** Themes
-
+** Look 'n feel
+*** Font
 #+begin_src emacs-lisp
-;;(use-package zenburn-theme
-;;  :ensure t
-;;  :config
-;;  (load-theme 'zenburn t))
+(set-face-attribute 'default nil :font "Fira Code" :height 120)
+#+end_src
 
-;;(use-package dracula-theme
-;;  :ensure t
-;;  :config
-;;  (load-theme 'dracula t))
+*** All the icons
+#+begin_src emacs-lisp
+(use-package all-the-icons
+  ;; Needs a manual `M-x all-the-icons-install-fonts`
+  :ensure t)
+#+end_src
 
+*** Emojify
+#+begin_src emacs-lisp
+(use-package emojify
+  :hook (after-init . global-emojify-mode))
+#+end_src
+
+*** Theme
+#+begin_src emacs-lisp
 (use-package doom-themes
   :ensure t
   :config
@@ -110,38 +118,24 @@
   (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
         doom-themes-enable-italic t) ; if nil, italics is universally disabled
   (load-theme 'doom-zenburn t)
-
   ;; Enable flashing mode-line on errors
   (doom-themes-visual-bell-config)
-  ;; Enable custom neotree theme (all-the-icons must be installed!)
-  (doom-themes-neotree-config)
-  ;; or for treemacs users
-  (setq doom-themes-treemacs-theme "doom-atom") ; use "doom-colors" for less minimal icon theme
-  (doom-themes-treemacs-config)
   ;; Corrects (and improves) org-mode's native fontification.
   (doom-themes-org-config))
+#+end_src
 
-;; Set font
-(set-face-attribute 'default nil :font "Fira Code" :height 120)
-
-(use-package emojify
-  :hook (erc-mode . emojify-mode)
-  :commands emojify-mode)
-
-(use-package all-the-icons
-  ;; Needs a manual `M-x all-the-icons-install-fonts`
-  :ensure t)
-
-;;(use-package doom-modeline
-;;  :ensure t
-;;  :init (doom-modeline-mode 1)
-;;  :config
-;;  (setq doom-modeline-height 40)
-;;  (setq doom-modeline-buffer-file-name-style 'relative-to-project)
-;;  (setq doom-line-numbers-style 'relative)
-;;  (setq doom-modeline-major-mode-icon t)
-;;  (setq doom-modeline-buffer-state-icon t)
-;;  (setq doom-modeline-major-mode-color-icon t))
+*** Custom modeline
+#+begin_src emacs-lisp
+(use-package doom-modeline
+  :ensure t
+  :init (doom-modeline-mode 1)
+  :config
+  (setq doom-modeline-height 40)
+  (setq doom-modeline-buffer-file-name-style 'relative-to-project)
+  (setq doom-line-numbers-style 'relative)
+  (setq doom-modeline-major-mode-icon t)
+  (setq doom-modeline-buffer-state-icon t)
+  (setq doom-modeline-major-mode-color-icon t))
 #+end_src
 
 ** Completion with Ivy
