--- a/.emacs.d/configuration.org
+++ b/.emacs.d/configuration.org
@@ -333,6 +333,6 @@ Invoke M-x tvl-depot-status RET to open Magit in the repo set in tvl-depot-path
   (add-to-list 'load-path "~/.dotfiles/.emacs.d/tvl")
     (require 'tvl)
   (setq tvl-depot-path "~/work/git/irma")
-  (setq tvl-target-branch "refs/for/master")
+  (setq tvl-target-branch "master")
   (setq tvl-gerrit-remote "origin")
 #+end_src
