--- a/.emacs.d/configuration.org
+++ b/.emacs.d/configuration.org
@@ -115,11 +115,11 @@
   ;; Global settings (defaults)
   (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
         doom-themes-enable-italic t) ; if nil, italics is universally disabled
-  (load-theme 'doom-zenburn t)
   ;; Enable flashing mode-line on errors
   (doom-themes-visual-bell-config)
   ;; Corrects (and improves) org-mode's native fontification.
-  (doom-themes-org-config))
+  (doom-themes-org-config)
+  (load-theme 'doom-one t))
 #+end_src
 
 *** Custom modeline
