[emacs] Stop auto indenting code in org-mode
- It kept indenting all lines every time I pressed enter.

--- a/.emacs.d/configuration.org
+++ b/.emacs.d/configuration.org
@@ -277,6 +277,8 @@
 ** Org mode
 
 #+begin_src emacs-lisp
+;; Stop auto indenting
+(setq org-src-preserve-indentation t)
 ;; Fancy bullet points
 (use-package org-superstar
   :ensure t
