--- a/.emacs.d/configuration.org
+++ b/.emacs.d/configuration.org
@@ -335,6 +335,7 @@
         lsp-enable-symbol-highlighting t)
   :hook
   ((fsharp-mode . lsp)
+   (csharp-mode . lsp)
    (lsp-mode . lsp-enable-which-key-integration)))
 
 (use-package lsp-ui
@@ -384,6 +385,18 @@
   :ensure t
   :config
   (add-to-list 'auto-mode-alist '("\\.fsproj\\'" . nxml-mode)))
+
+#+end_src
+
+*** C#
+
+#+begin_src emacs-lisp
+(use-package csharp-mode
+  :ensure t
+  :config
+  (electric-pair-local-mode 1)
+  (add-to-list 'auto-mode-alist '("\\.cs\\'" . csharp-tree-sitter-mode))
+  (add-to-list 'auto-mode-alist '("\\.csproj\\'" . nxml-mode)))
 
 #+end_src
 
