--- a/.emacs.d/configuration.org
+++ b/.emacs.d/configuration.org
@@ -374,9 +374,11 @@
 ;;(use-package highlight-indentation)
 
 (use-package highlight-indent-guides
-;;  :config
-;;    (setq highlight-indent-guides-auto-odd-face-perc 50)
-;;    (setq highlight-indent-guides-auto-even-face-perc 50)
+  :config
+    (setq highlight-indent-guides-method 'character)
+    (setq highlight-indent-guides-responsive 'top)
+;;    (setq highlight-indent-guides-auto-odd-face-perc 10)
+;;    (setq highlight-indent-guides-auto-even-face-perc 10)
 ;;    (setq highlight-indent-guides-auto-character-face-perc 20)
   :hook (fsharp-mode . highlight-indent-guides-mode))
 
