[emacs] Disable dumb-jump.
- I want to see if LSP can do the same job

--- a/.emacs.d/configuration.org
+++ b/.emacs.d/configuration.org
@@ -361,12 +361,13 @@
   :hook (prog-mode . rainbow-delimiters-mode))
 
 ;; Utility for jumping to definition in "any" language
-(use-package dumb-jump
-  :ensure t
-  :hook (prog-mode . dumb-jump-mode))
+;;(use-package dumb-jump
+;;  :ensure t
+;;  :hook (prog-mode . dumb-jump-mode))
+;;
+;;(add-hook 'xref-backend-functions #'dumb-jump-xref-activate)
+;;(setq xref-show-definitions-function #'xref-show-definitions-completing-read)
 
-(add-hook 'xref-backend-functions #'dumb-jump-xref-activate)
-(setq xref-show-definitions-function #'xref-show-definitions-completing-read)
 
 ;; In-buffer completion framework
 (use-package company
