[emacs] Add package multiple-cursors

--- a/.emacs.d/configuration.org
+++ b/.emacs.d/configuration.org
@@ -368,6 +368,12 @@
 ;;(add-hook 'xref-backend-functions #'dumb-jump-xref-activate)
 ;;(setq xref-show-definitions-function #'xref-show-definitions-completing-read)
 
+(use-package multiple-cursors
+  :ensure t
+  :bind (("C-S-c C-S-c" . 'mc/edit-lines)
+         ("C->" . 'mc/mark-next-like-this)
+         ("C-<" . 'mc/mark-previous-like-this)
+         ("C-c C-<" . 'mc/mark-all-like-this)))
 
 ;; In-buffer completion framework
 (use-package company
