--- a/.emacs.d/configuration.org
+++ b/.emacs.d/configuration.org
@@ -164,7 +164,7 @@
   (doom-themes-visual-bell-config)
   ;; Corrects (and improves) org-mode's native fontification.
   (doom-themes-org-config)
-  (load-theme 'doom-one t))
+  (load-theme 'doom-gruvbox t))
 #+end_src
 
 *** Custom modeline
