--- a/.emacs.d/configuration.org
+++ b/.emacs.d/configuration.org
@@ -14,6 +14,7 @@
 (windmove-default-keybindings)   ; Enable S-<left/right/up/down> split window navigaion
 (global-set-key (kbd "C-x C-z") nil) ; Don’t lock emacs when muscle memory wants to do undo
 (global-set-key (kbd "C-z") nil)     ; Don’t lock emacs when muscle memory wants to do undo
+(setq create-lockfiles nil) ; Don't create stupid lock files, I'm THE user!
 #+end_src
 
 ** Startup performance
