[emacs] Replace Ivy with consult
- Add projectile ripgrep

--- a/.emacs.d/configuration.org
+++ b/.emacs.d/configuration.org
@@ -169,122 +169,50 @@
   (setq doom-modeline-major-mode-color-icon t))
 #+end_src
 
-** Completion with Ivy
+** Completion
 
 #+begin_src emacs-lisp
-(use-package swiper
-  :ensure t)
-
-(use-package ivy
-  :diminish
-  :bind (("C-s" . swiper))
-;;         :map ivy-minibuffer-map
-;;         ("TAB" . ivy-alt-done)
-;;         ("C-f" . ivy-alt-done)
-;;         ("C-l" . ivy-alt-done)
-;;         ("C-j" . ivy-next-line)
-;;         ("C-k" . ivy-previous-line)
-;;         :map ivy-switch-buffer-map
-;;         ("C-k" . ivy-previous-line)
-;;         ("C-l" . ivy-done)
-;;         ("C-d" . ivy-switch-buffer-kill)
-;;         :map ivy-reverse-i-search-map
-;;         ("C-k" . ivy-previous-line)
-;;         ("C-d" . ivy-reverse-i-search-kill)
-;;	 )
-  :config
-  (ivy-mode 1)
-  (setq ivy-use-virtual-buffers t)
-  (setq ivy-wrap t)
-  (setq ivy-count-format "(%d/%d) ")
-  (setq enable-recursive-minibuffers t))
-
-  ;; Use different regex strategies per completion command
-  ;;(push '(completion-at-point . ivy--regex-fuzzy) ivy-re-builders-alist) ;; This doesn't seem to work...
-  ;;(push '(swiper . ivy--regex-ignore-order) ivy-re-builders-alist)
-  ;;(push '(counsel-M-x . ivy--regex-ignore-order) ivy-re-builders-alist)
-
-  ;; Set minibuffer height for different commands
-  ;;(setf (alist-get 'counsel-projectile-ag ivy-height-alist) 15)
-  ;;(setf (alist-get 'counsel-projectile-rg ivy-height-alist) 15)
-  ;;(setf (alist-get 'swiper ivy-height-alist) 15)
-  ;;(setf (alist-get 'counsel-switch-buffer ivy-height-alist) 7))
-
-;;(use-package ivy-hydra
-;;  :after hydra)
-
-(use-package ivy-rich
-  :after ivy
-  :config
-  (ivy-rich-mode 1))
-;;  :after counsel
-;;  :config
-;;  (setq ivy-format-function #'ivy-format-function-line)
-;;  (setq ivy-rich-display-transformers-list
-;;        (plist-put ivy-rich-display-transformers-list
-;;                   'ivy-switch-buffer
-;;                   '(:columns
-;;                     ((ivy-rich-candidate (:width 40))
-;;                      (ivy-rich-switch-buffer-indicators (:width 4 :face error :align right)); return the buffer indicators
-;;                      (ivy-rich-switch-buffer-major-mode (:width 12 :face warning))          ; return the major mode info
-;;                      (ivy-rich-switch-buffer-project (:width 15 :face success))             ; return project name using `projectile'
-;;                      (ivy-rich-switch-buffer-path (:width (lambda (x) (ivy-rich-switch-buffer-shorten-path x (ivy-rich-minibuffer-width 0.3))))))  ; return file path relative to project root or `default-directory' if project is nil
-;;                     :predicate
-;;                     (lambda (cand)
-;;                       (if-let ((buffer (get-buffer cand)))
-;;                           ;; Don't mess with EXWM buffers
-;;                           (with-current-buffer buffer
-;;                             (not (derived-mode-p 'exwm-mode)))))))))
-
-(use-package counsel
+;; Replaces native buffer switching and search default functions
+(use-package consult
   :ensure t
-  :bind (("M-x" . counsel-M-x)
-         ("C-x b" . counsel-ibuffer)
-         ("C-x C-f" . counsel-find-file)
-         ("C-M-j" . counsel-switch-buffer)
-         ("C-M-l" . counsel-imenu)
-         :map minibuffer-local-map
-         ("C-r" . 'counsel-minibuffer-history))
   :custom
-  (counsel-linux-app-format-function #'counsel-linux-app-format-function-name-only)
-  :config
-  (counsel-mode 1)
-  (setq ivy-initial-inputs-alist nil)) ;; Don't start searches with ^
+  (consult-project-function
+   (lambda (_)
+     (if (boundp 'projectile-project-root)
+         (projectile-project-root) "/" )))
+  :bind
+  ("C-s" . consult-line)
+  ("C-M-j" . consult-buffer))
 
-;;(use-package flx  ;; Improves sorting for fuzzy-matched results
-;;  :after ivy
-;;  :custom
-;;  (ivy-flx-limit 10000))
-
-(use-package wgrep)
-
-(use-package ivy-posframe
-  :disabled
-  :custom
-  (ivy-posframe-width      115)
-  (ivy-posframe-min-width  115)
-  (ivy-posframe-height     10)
-  (ivy-posframe-min-height 10)
-  :config
-  (setq ivy-posframe-display-functions-alist '((t . ivy-posframe-display-at-frame-center)))
-  (setq ivy-posframe-parameters '((parent-frame . nil)
-                                  (left-fringe . 8)
-                                  (right-fringe . 8)))
-  (ivy-posframe-mode 1))
-
-(use-package prescient
-  :after counsel
-  :config
-  (prescient-persist-mode 1))
-
-(use-package ivy-prescient
-  :after prescient
-  :config
-  (ivy-prescient-mode 1))
-
-(use-package all-the-icons-ivy
+(use-package savehist
   :ensure t
-  :after ivy)
+  :init
+  (savehist-mode))
+
+;; Injects extra context in a new column
+(use-package marginalia
+  :ensure t
+  :init
+  (marginalia-mode))
+
+;; Fuzzy completion eveywhere
+(use-package orderless
+  :ensure t
+  :custom
+  (completion-styles '(orderless basic)))
+
+;; Minibuffer completion popup
+(use-package vertico
+  :ensure t
+  :init
+  (vertico-mode))
+
+;; Show completions in my face
+(use-package vertico-posframe
+  :ensure t
+  :config
+  (vertico-posframe-mode t))
+
 #+end_src
 
 ** File browser (dired)
@@ -323,14 +251,16 @@
 #+begin_src emacs-lisp
 (use-package projectile
   :ensure t
-  :config (projectile-mode)
-  :custom ((projectile-completion-system 'ivy))
+  :config (projectile-global-mode)
+  :custom
+  (projectile-globally-ignored-directories '(".git"))
+  (projectile-dirconfig-file ".gitignore")
   :bind-keymap
-  ("C-c p" . projectile-command-map))
-
-;;(use-package counsel-projectile
-;;  :after projectile
-;;  :config (counsel-projectile-mode))
+  ("C-c p" . projectile-command-map)
+  :bind
+  (:map projectile-command-map
+        ("SPC" . projectile-find-file)
+        ("r" . consult-ripgrep)))
 #+end_src
 
 ** Programming
